--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@
 
 # Basic Jekyll settings
 theme: jekyll-theme-slate
-title: "My Portfolio"
-description: "A showcase of my projects and skills"
+title: "Handsome Zheng Project Portfolio"
+description: "A showcase of some of my projects and skills"
